<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    app:cardCornerRadius="20dp"
    android:foreground="@drawable/custom_card"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="116dp"
        android:layout_height="94dp">

        <ImageView
            android:id="@+id/order_product_image"
            android:layout_width="133dp"
            android:layout_height="111dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/laptop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="289dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="110dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_product_name"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/newregular"
            android:text="@string/product_name"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/order_product_quantity"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/newregular"
            android:text="@string/product_quantity"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/order_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="60dp"
            android:text="@string/product_price"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:textSize="15dp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/order_again_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="60dp"
            android:text="@string/order_again"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:textSize="15dp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>