<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.SettingsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pink"
        >


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:text="Close"
android:fontFamily="@font/newbold"
                   android:textSize="17sp"
                   android:textColor="@android:color/white"
                   android:id="@+id/close_setting_btn"
                   android:layout_alignParentStart="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">


               </TextView>

               <TextView
                   android:id="@+id/update_account_settings_btn"
                   android:text="Update"
android:fontFamily="@font/newbold"
                   android:textSize="17sp"
                   android:textColor="@android:color/white"
                   android:layout_marginRight="10dp"
                   android:layout_alignParentEnd="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">


               </TextView>



           </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_bar_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:layout_marginRight="10dp"
        android:text="@string/change_profile"
        android:textColor="@color/pink"
        android:textSize="19sp"
        android:fontFamily="@font/newbold"
        >


    </TextView>

    <EditText

        android:id="@+id/settings_phone_number"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_below="@+id/settings_full_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/phone_number"
        android:textColorHint="@color/grey"
        android:padding="15dp"
        android:fontFamily="@font/newregular"/>

    <EditText

        android:textColorHint="@color/grey"
        android:id="@+id/settings_full_name"
        android:fontFamily="@font/newregular"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_below="@+id/profile_image_change_btn"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
android:background="@drawable/custom_edit_text"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/full_name"
        android:minHeight="48dp"
        android:padding="15dp" />
    <EditText

        android:id="@+id/settings_address"
        android:fontFamily="@font/newregular"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:textColorHint="@color/grey"
        android:hint="@string/address"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/settings_phone_number"
        android:padding="15dp"

        />

    <EditText

        android:id="@+id/settings_pass"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:hint="@string/password1"
        android:layout_margin="15dp"
        android:fontFamily="@font/newregular"
        android:layout_below="@+id/settings_address"
        android:padding="15dp"
android:background="@drawable/custom_edit_text"
        android:textColorHint="@color/grey"
        />

    <Button

        android:id="@+id/security_questions_btn"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_below="@+id/settings_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"

        android:layout_marginBottom="15dp"
        android:background="@drawable/register_button"
        android:fontFamily="@font/newbold"
        android:padding="15dp"
        android:text="@string/set_security_questions"
        android:textColor="@android:color/white" />


</RelativeLayout>