<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
    android:background="@color/white"
    tools:context=".Admin.AdminMaintainProductsActivity"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/RelativeLayout66"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gradientadminbtnrectangle"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/arrow_admin_product_details"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:fontFamily="@font/newbold"
            android:text="@string/product_details"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24dp" />
    </RelativeLayout>



    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/product_image_maintain"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/womanclothes"
        android:scaleType="fitCenter"/>

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="289dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/card1"
        app:cardElevation="15dp"
        tools:context=".Admin.AdminMaintainProductsActivity">

        <RelativeLayout
            android:layout_width="375dp"
            android:layout_height="289dp"
            android:background="@drawable/gradientadminbtn">


            <EditText
                android:id="@+id/product_price_maintain"
                android:layout_width="335dp"
                android:layout_height="48dp"
                android:layout_below="@+id/product_description_maintain"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/admin_edit_text"
                android:fontFamily="@font/newregular"
                android:hint="@string/product_price1"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textColorHint="@color/pink"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/product_description_maintain"
                android:layout_width="335dp"
                android:layout_height="133dp"
                android:layout_below="@+id/product_name_maintain"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/admin_edit_text"
                android:fontFamily="@font/newregular"
                android:hint="@string/product_description"
                android:padding="12dp"
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textColorHint="@color/pink"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/product_name_maintain"
                android:layout_width="335dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/admin_edit_text"
                android:fontFamily="@font/newregular"
                android:hint="@string/product_name"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textColorHint="@color/pink"
                android:textSize="20dp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/apply_changes_Btn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card1"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradientadminbtn"
        android:fontFamily="@font/newregular"
        android:foreground="@drawable/pen"
        android:foregroundGravity="right|center_vertical"

        android:foregroundTint="@color/white"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/delete_product_Btn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card1"
        android:layout_marginStart="230dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradientadminbtn"
        android:fontFamily="@font/newregular"
        android:foreground="@drawable/delete"
        android:foregroundGravity="right|center_vertical"
        android:foregroundTint="@color/white"

        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp" />
</RelativeLayout>